pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/zcache_slog_sharing
dist_pkgdata_SCRIPTS = \
	setup.ksh \
	zcache_slog_sharing_zpool_create_pos.ksh \
	zcache_slog_sharing_zpool_add_pos.ksh \
	zcache_slog_sharing_zpool_import_pos.ksh \
	zcache_slog_sharing_multiple_pools_pos.ksh \
	zcache_slog_sharing_without_cache_inuse_pos.ksh \
	zcache_slog_sharing_slog_same_as_cache_neg.ksh \
	zcache_slog_sharing_import_pool_slog_missing_neg.ksh \
	zcache_slog_sharing_zoa_invalid_cache_device_neg.ksh \
	cleanup.ksh

dist_pkgdata_DATA = \
	zcache_slog_sharing.kshlib
