pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/cli_root/zpool_destroy
dist_pkgdata_SCRIPTS = \
	zpool_destroy_001_pos.ksh \
	zpool_destroy_002_pos.ksh \
	zpool_destroy_003_neg.ksh \
	zpool_destroy_object_store.ksh \
	zpool_resume_destroy_object_store.ksh \
	zpool_resume_destroy_on_import_object_store.ksh
dist_pkgdata_DATA = \
	zpool_destroy.cfg
